<resources>
    <string name="app_name">Lab4</string>
    <string name="add">+</string>>
    <string name="name">Input contact name</string>>
    <string name="login">User email</string>>
    <string name="singinUser">Singin</string>>
    <string name="singupUser">Singup</string>>
    <string name="password">User password</string>>
    <string name="password_repeat">Repeat password</string>>
    <string name="email">Input contact Email</string>>
    <string name="location">Add location</string>>
    <string name="phone">Input contact phone number</string>>
    <string name="link">Input contact social link</string>>
    <string name="createContact">Create contact</string>>
    <string name="menu_remove">Remove</string>
    <string name="menu_copy">Copy</string>
    <string name="remove">-</string>
    <string name="edit">edit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_edit">Edit</string>
</resources>